--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ python:
 - '2.7'
 - '3.3'
 
-install:
+before_install:
 - pip install -U pip setuptools
 - pip install hacking pytest
 
-before_script:
-- flake8 .
-
 install:
 - pip install .
+
+before_script:
+- flake8 .
 
 script:
 - pytest -vs .
