--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,16 @@ python:
 
 before_install:
 - pip install -U pip setuptools
-- pip install hacking pytest
 
 install:
 - pip install .
 
 before_script:
+- pip install hacking
 - flake8 .
 
 script:
+- pip install pytest
 - pytest -vs .
 
 branches:
