--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ before_script:
 
 script:
 - pip install pytest
-- which pytest || which py.test
-- pytest -vs .
+- py.test -vs .
 
 branches:
   only:
